# dvbt-rx

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CONTEXT.md  DEVELOPMENT.md  LICENSE  PA3BYV_20260516_DATV_event.md  README.md  README_WINDOWS_GUI.txt  RELEASE_WINDOWS_0.1.2.md
gui/windows/: rbdvbt_gui.cpp
include/: config.h  dvbt_2k_model.h  dvbt_outer.h  iq_input.h  pipeline.h  probe_constellation.h  receiver.h  udp_ts_output.h  visualizer.h
plots/: acquisition_333_scan.csv  cp_timing_333.csv  dvbt_rate_long_recovered_rs.ts  dvbt_rate_recovered.ts  dvbt_rate_recovered_rs.ts  dvbt_rate_soft_recovered.ts  fec_packet_error_vs_fixed_cn_by_sr.csv  fec_packet_error_vs_fixed_cn_by_sr_150k.csv  fec_packet_error_vs_fixed_cn_by_sr_150k_gi18.csv  fec_packet_error_vs_snr.csv  fec_packet_error_vs_snr_by_sr.csv  fine_timing_333.csv  legacy_fft512_qpsk.csv  legacy_fft512_qpsk_equalized.csv  qpsk_250.csv  qpsk_333.csv  qpsk_333_best_carriers.csv  qpsk_333_best_equalized.csv  qpsk_333_best_spectrum.csv  qpsk_333_best_window_sweep.csv  qpsk_333_carrier_map.csv  qpsk_333_carrier_spacing.csv  qpsk_333_fft512.csv  qpsk_333_fft512_carriers.csv  qpsk_333_fft512_equalized.csv  qpsk_333_fft512_mapping_scan.csv  qpsk_333_fft512_spectrum.csv  qpsk_333_fft512_window_sweep.csv  qpsk_333_highres_spectrum.csv
rbdvbt_qpsk_probe/: CMakeLists.txt  README.md
rbdvbt_qpsk_probe/src/: main.cpp
src/: config.c  dvbt_2k_model.c  dvbt_outer.c  iq_input.c  main.c  pipeline.c  probe_constellation.c  receiver.c  udp_ts_output.c  visualizer.c
tools/: compare_viterbi_decoders.sh  dvbt_fec_snr_plot.c  iq_airscatter_channel.c  pa3byv_replay_metrics.py  portsdown_iq_dump.cpp  rbdvbt_status_watch.c  run_airscatter_looptest.sh
tools-pi6ehv/: README.md  build_odroid_arm64.sh  dvbt-rx-status.html  dvbt-rx.service  dvbt_rx_pi6ehv.sh
